--- a/pass/feature-home/impl/src/main/res/values/strings.xml
+++ b/pass/feature-home/impl/src/main/res/values/strings.xml
@@ -9,10 +9,7 @@
     <string name="home_empty_vault_create_alias">Create a Hide-my-email alias</string>
     <string name="home_empty_vault_create_note">Create a note</string>
 
-    <string
-        name="error_observing_items"
-        comment="Error message shown whenever there is an error loading the items"
-    >Error loading items</string>
+    <string name="error_observing_items" comment="Error message shown whenever there is an error loading the items">Error loading items</string>
     <string name="error_refreshing">Error performing refresh</string>
 
     <string name="home_snackbar_login_moved_to_trash">Login moved to trash</string>
@@ -52,7 +49,8 @@
     <string name="password_copied_to_clipboard">Password copied</string>
     <string name="credit_card_number_copied_to_clipboard">Credit card number copied</string>
     <string name="credit_card_cvv_copied_to_clipboard">Credit card CVV copied</string>
-    <string name="item_too_long_copied_to_clipboard">Content was too long, partially copied to the clipboard</string>
+
+    <string name="item_too_long_copied_to_clipboard" comment="Snackbar message that's shown to the user whenever an action where the content that would be copied to the clipboard cannot be performed due to the size of the text">Content was too long, partially copied to the clipboard</string>
 
     <!-- Vault drawer -->
     <string name="vault_drawer_vaults_title">Vaults</string>
