--- a/pass/feature-item-create/impl/src/main/res/values-ru/strings.xml
+++ b/pass/feature-item-create/impl/src/main/res/values-ru/strings.xml
@@ -95,7 +95,7 @@
   <string name="credit_card_item_update_error">Не могу обновить кредитную карту</string>
   <!--  Common create items  -->
   <string name="changes_saved">Изменения сохранены</string>
-  <!--  Totp  -->
+  <!--  TOTP  -->
   <string name="totp_create_login_field_title">Секрет 2ФА (TOTP)</string>
   <string name="totp_create_login_field_invalid">Недействительный секрет 2ФА</string>
   <string name="totp_create_login_field_placeholder">Добавить секрет 2ФА</string>
@@ -105,10 +105,10 @@
   <string name="field_cannot_be_empty">This field cannot be empty</string>
   <string name="camera_permission_explanation">Camera permission required for this feature to be available.</string>
   <string name="camera_permission_open_settings">Открыть настройки</string>
-  <!--  Totp limit  -->
+  <!--  TOTP limit  -->
   <string name="mfa_limit_reached">2FA limit reached</string>
   <string name="upgrade">Повысить</string>
-  <string name="mfa_icon_content_description">2fa icon</string>
+  <string name="mfa_icon_content_description">2FA icon</string>
   <string name="select_suffix_upgrade_for_custom_domains">Upgrade for custom domains</string>
   <string name="select_mailbox_upgrade_for_more_inboxes">Upgrade for more inboxes</string>
   <string name="create_alias_content_limit_banner">You have reached the limit of aliases you can create. Create unlimited number of aliases when you upgrade your subscription.</string>
