--- a/pass/feature-item-detail/impl/src/main/res/values-ru/strings.xml
+++ b/pass/feature-item-detail/impl/src/main/res/values-ru/strings.xml
@@ -50,7 +50,7 @@
   <string name="more_info_last_time_modified">Last time, %s</string>
   <string name="open_menu_icon_content_description">Open menu button</string>
   <string name="mfa_limit_reached">2FA limit reached</string>
-  <string name="mfa_icon_content_description">2fa icon</string>
+  <string name="mfa_icon_content_description">2FA icon</string>
   <string name="custom_field_text_icon_description">Text custom field</string>
   <string name="custom_field_hidden_icon_description">Hidden custom field</string>
   <string name="custom_field_totp_icon_description">2FA custom field</string>
