--- a/pass/autofill/impl/src/main/res/values-it/strings.xml
+++ b/pass/autofill/impl/src/main/res/values-it/strings.xml
@@ -15,7 +15,7 @@
   <string name="autofill_dialog_associate_and_autofill">Usa sempre</string>
   <string name="autofill_dialog_just_autofill">Usa una volta</string>
   <string name="autofill_dialog_cancel">Annulla</string>
-  <string name="autofill_notification_copy_to_clipboard">Totp copiato negli appunti</string>
+  <string name="autofill_notification_copy_to_clipboard">TOTP copiato negli appunti</string>
   <string name="autofill_dialog_associate_title">Usare il login?</string>
   <string name="snackbar_item_move_to_trash_success">Elemento spostato nel cestino</string>
   <string name="snackbar_item_move_to_trash_error">Impossibile spostare nel cestino</string>
