--- a/pass/autofill/impl/src/main/res/values-ko/strings.xml
+++ b/pass/autofill/impl/src/main/res/values-ko/strings.xml
@@ -15,7 +15,7 @@
   <string name="autofill_dialog_associate_and_autofill">항상 사용</string>
   <string name="autofill_dialog_just_autofill">한 번만 사용</string>
   <string name="autofill_dialog_cancel">취소</string>
-  <string name="autofill_notification_copy_to_clipboard">Totp를 클립보드에 복사했습니다</string>
+  <string name="autofill_notification_copy_to_clipboard">TOTP를 클립보드에 복사했습니다</string>
   <string name="autofill_dialog_associate_title">로그인 사용?</string>
   <string name="snackbar_item_move_to_trash_success">항목을 휴지통으로 이동했습니다</string>
   <string name="snackbar_item_move_to_trash_error">휴지통으로 이동할 수 없습니다</string>
