--- a/pass/autofill/impl/src/main/res/values-ru/strings.xml
+++ b/pass/autofill/impl/src/main/res/values-ru/strings.xml
@@ -15,7 +15,7 @@
   <string name="autofill_dialog_associate_and_autofill">Использовать всегда</string>
   <string name="autofill_dialog_just_autofill">Использовать один раз</string>
   <string name="autofill_dialog_cancel">Отменить</string>
-  <string name="autofill_notification_copy_to_clipboard">Totp скопирован в буфер обмена</string>
+  <string name="autofill_notification_copy_to_clipboard">TOTP скопирован в буфер обмена</string>
   <string name="autofill_dialog_associate_title">Использовать логин?</string>
   <string name="snackbar_item_move_to_trash_success">Элемент перемещен в корзину</string>
   <string name="snackbar_item_move_to_trash_error">Не могу переместить в корзину</string>
