--- a/pass/feature-item-create/impl/src/main/res/values-nl/strings.xml
+++ b/pass/feature-item-create/impl/src/main/res/values-nl/strings.xml
@@ -95,7 +95,7 @@
   <string name="credit_card_item_update_error">Kon kredietkaart niet bijwerken</string>
   <!--  Common create items  -->
   <string name="changes_saved">Wijzigingen opgeslagen.</string>
-  <!--  Totp  -->
+  <!--  TOTP  -->
   <string name="totp_create_login_field_title">2FA-geheim (TOTP)</string>
   <string name="totp_create_login_field_invalid">Ongeldig 2FA-geheim</string>
   <string name="totp_create_login_field_placeholder">Voeg 2FA-geheim toe</string>
@@ -105,7 +105,7 @@
   <string name="field_cannot_be_empty">Dit veld mag niet leeg zijn</string>
   <string name="camera_permission_explanation">Cameratoestemming vereist om deze functie beschikbaar te maken.</string>
   <string name="camera_permission_open_settings">Instellingen openen</string>
-  <!--  Totp limit  -->
+  <!--  TOTP limit  -->
   <string name="mfa_limit_reached">2FA-limiet bereikt</string>
   <string name="upgrade">Upgraden</string>
   <string name="mfa_icon_content_description">2FA-pictogram</string>
