--- a/pass/feature-item-create/impl/src/main/res/values-sv-rSE/strings.xml
+++ b/pass/feature-item-create/impl/src/main/res/values-sv-rSE/strings.xml
@@ -95,7 +95,7 @@
   <string name="credit_card_item_update_error">Kunde inte uppdatera kreditkort</string>
   <!--  Common create items  -->
   <string name="changes_saved">Ändringar sparade</string>
-  <!--  Totp  -->
+  <!--  TOTP  -->
   <string name="totp_create_login_field_title">2FA-hemlighet (TOTP)</string>
   <string name="totp_create_login_field_invalid">Ogiltig 2FA-hemlighet</string>
   <string name="totp_create_login_field_placeholder">Lägg till 2FA-hemlighet</string>
@@ -105,7 +105,7 @@
   <string name="field_cannot_be_empty">Fältet kan inte vara tomt</string>
   <string name="camera_permission_explanation">Tillåtelse för kamera krävs för att denna funktion ska vara tillgänglig.</string>
   <string name="camera_permission_open_settings">Öppna inställningar</string>
-  <!--  Totp limit  -->
+  <!--  TOTP limit  -->
   <string name="mfa_limit_reached">2FA-gränsen uppnådd</string>
   <string name="upgrade">Uppgradera</string>
   <string name="mfa_icon_content_description">Ikon för “2FA“</string>
