--- a/pass/feature-item-create/impl/src/main/res/values-zh-rTW/strings.xml
+++ b/pass/feature-item-create/impl/src/main/res/values-zh-rTW/strings.xml
@@ -95,7 +95,7 @@
   <string name="credit_card_item_update_error">無法更新信用卡</string>
   <!--  Common create items  -->
   <string name="changes_saved">更改保存。</string>
-  <!--  Totp  -->
+  <!--  TOTP  -->
   <string name="totp_create_login_field_title">雙重驗證一次性驗證碼(TOTP)</string>
   <string name="totp_create_login_field_invalid">錯誤雙重驗證碼</string>
   <string name="totp_create_login_field_placeholder">新增雙重驗證碼</string>
@@ -105,7 +105,7 @@
   <string name="field_cannot_be_empty">此欄無法空白</string>
   <string name="camera_permission_explanation">此功能需要鏡頭權限</string>
   <string name="camera_permission_open_settings">開啟設定</string>
-  <!--  Totp limit  -->
+  <!--  TOTP limit  -->
   <string name="mfa_limit_reached">雙重驗證已達上限</string>
   <string name="upgrade">升級</string>
   <string name="mfa_icon_content_description">雙重驗證圖像</string>
