--- a/pass/feature-sharing/impl/src/main/res/values/strings.xml
+++ b/pass/feature-sharing/impl/src/main/res/values/strings.xml
@@ -178,5 +178,9 @@
         name="sharing_from_item_create_vault_to_share_action"
         comment="Button for creating a new vault and sharing it"
     >Create a new vault to share</string>
+    <string
+        name="sharing_from_item_create_vault_to_share_subtitle"
+        comment="Text that will appear under the sharing_from_item_create_vault_to_share_action button"
+    >This item will be moved to the new vault.</string>
 
 </resources>
