--- a/pass/feature-sharing/impl/src/main/res/values/strings.xml
+++ b/pass/feature-sharing/impl/src/main/res/values/strings.xml
@@ -182,5 +182,7 @@
         name="sharing_from_item_create_vault_to_share_subtitle"
         comment="Text that will appear under the sharing_from_item_create_vault_to_share_action button"
     >This item will be moved to the new vault.</string>
+    <string name="sharing_from_item_vault_limit_reached_upgrade">Upgrade to create more vaults</string>
+    <string name="sharing_from_item_vault_limit_reached">You have reached the vault limit</string>
 
 </resources>
