--- a/pass/feature-item-create/impl/src/main/res/values/strings.xml
+++ b/pass/feature-item-create/impl/src/main/res/values/strings.xml
@@ -125,7 +125,7 @@
     <string name="field_card_pin_hint">123456</string>
     <string name="field_card_expiration_date_title">Expiration date</string>
     <string name="field_card_expiration_date_hint">MM / YYYY</string>
-    <string name="field_card_expiration_date_error">The expiration date is not valid</string>
+    <string name="field_card_expiration_date_error">Enter a valid date in MM/YYYY format</string>
 
     <string name="create_credit_card_item_creation_error">Could not create credit card</string>
     <string name="create_credit_card_item_creation_success">Credit card created</string>
