--- a/pass/feature-profile/impl/src/main/res/values/strings.xml
+++ b/pass/feature-profile/impl/src/main/res/values/strings.xml
@@ -50,4 +50,9 @@
     <string name="profile_option_unlock_with">Unlock with</string>
     <string name="profile_option_change_pin_code">Change PIN Code</string>
 
+    <string
+        name="profile_option_autofill_samsung_not_supported"
+        comment="This text will appear on the Autofill toggle if the user has the default browser set to Samsung Browser"
+    >Samsung Browser is set as the default browser. It does not support autofill by external password managers.</string>
+
 </resources>
