--- a/pass/autofill/impl/src/main/res/values/strings.xml
+++ b/pass/autofill/impl/src/main/res/values/strings.xml
@@ -8,6 +8,14 @@
     <string name="topbar_search_query_oldest_vaults">Search in your oldest vaults…</string>
     <string name="topbar_search_query_uninitialized" comment="Placeholder string before we know where we're searching (all vaults, oldest vaults, etc.)">Search…</string>
     <string name="inline_suggestions_open_app">Open Proton Pass</string>
+    <string
+        name="suggestions_cc_autofill_paid_plans_title"
+        comment="This string is shown in the autofill suggestions when the user is not on a paid plan but has credit cards that can be autofilled"
+    >Card autofill</string>
+    <string
+        name="suggestions_cc_autofill_paid_plans_subtitle"
+        comment="This string is shown in the autofill suggestions when the user is not on a paid plan but has credit cards that can be autofilled"
+    >Upgrade to autofill</string>
     <string name="autofill_only_searching_in_oldest_vaults">Your plan only allows to use items in your oldest vaults for autofill purposes.</string>
 
     <!-- Placeholder will contain the domain / app name we are trying to autofill -->
