chore: update suggestions text

--- a/pass/autofill/impl/src/main/res/values/strings.xml
+++ b/pass/autofill/impl/src/main/res/values/strings.xml
@@ -11,11 +11,11 @@
     <string
         name="suggestions_cc_autofill_paid_plans_title"
         comment="This string is shown in the autofill suggestions when the user is not on a paid plan but has credit cards that can be autofilled"
-    >Card autofill</string>
+    >Autofill card details</string>
     <string
         name="suggestions_cc_autofill_paid_plans_subtitle"
         comment="This string is shown in the autofill suggestions when the user is not on a paid plan but has credit cards that can be autofilled"
-    >Upgrade to autofill</string>
+    >Upgrade your plan</string>
     <string name="autofill_only_searching_in_oldest_vaults">Your plan only allows to use items in your oldest vaults for autofill purposes.</string>
 
     <!-- Placeholder will contain the domain / app name we are trying to autofill -->
